# lfm-inference

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
baseten/: README.md
baseten/lfm2-8b/: config.yaml
fal/: README.md  deploy-lfm2.py
modal/: README.md  deploy-vllm-docker.py  deploy-vllm-pypi.py  deploy-vllm-with-sleep.py  deploy-vllm.py  pyproject.toml  vllm.py
